--- a/public/css/style2.css
+++ b/public/css/style2.css
@@ -1496,9 +1496,9 @@ a:hover {
 
 .card-header-b .category-b {
   font-size: 0.9rem;
-  background-color: #2eca6a;
+  background-color: #005555;
   padding: 0.3rem 0.7rem;
-  color: #313131;
+  color: #ffffff;
   letter-spacing: 0.03em;
   border-radius: 50px;
   text-decoration: none;
